fix scrollbar display on some screens

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1132,8 +1132,23 @@ nav.masthead {
         background-color: rgba(0,0,0,.1);
         transition: all .2s ease-in-out;
         color: white;
-        overflow-y: scroll;
+        overflow-y: hidden;
         cursor: pointer;
+
+        &::-webkit-scrollbar {
+            width: 4px;
+            padding: 10px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: transparent;
+            border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            background-color: alpha(white, .5);
+        }
 
         .photo-drawer {
             opacity: 0;
@@ -1149,6 +1164,7 @@ nav.masthead {
             background-color: rgba(0,0,0,.35);
             transition: all .2s ease-in-out;
             cursor: intial;
+            overflow-y: scroll;
             -webkit-overflow-scrolling: touch;
 
             .menu-toggle {
